add --framework option to generators allow to switch framework with WATIRSPLASH_FRAMEWORK env variable load_gems method shows now all missing dependencies at once instead of failing each time until dependencies are met

--- a/lib/watirsplash/generators/templates/new_project/config.rb.tt
+++ b/lib/watirsplash/generators/templates/new_project/config.rb.tt
@@ -1,3 +1,15 @@
+# What framework to use? Possible values are:
+#   * watir
+#   * firewatir
+#   * watir-webdriver/ie
+#   * watir-webdriver/firefox
+#   * watir-webdriver/chrome
+<%=
+  load_cmd = ""
+  load_cmd += "# " if load_common
+  load_cmd += "WatirSplash::Util.framework = \"#{framework}\""
+%> 
+
 # Config for your application
 module Config
   module <%= name %>
