--- a/lib/watirsplash/generators/templates/new_project/environment.rb.tt
+++ b/lib/watirsplash/generators/templates/new_project/environment.rb.tt
@@ -1,7 +1,24 @@
+require "rubygems"
+require "bundler"
+Bundler.setup
+require "watirsplash"
+
 # Add all your require statements into this file to avoid unnecessary
 # code in your spec files
 
 <%= load_common_cmd %>
+
+# What framework to use? Possible values are:
+#   * default
+#   * watir
+#   * firewatir
+#   * watir-webdriver/ie
+#   * watir-webdriver/firefox
+#   * watir-webdriver/chrome
+WatirSplash::Util.framework = %<= %Q{"#{framework}"} %> 
+
+# Load the framework specified by the environment variable WATIRSPLASH_FRAMEWORK or WatirSplash::Util.framework
+WatirSplash::Util.load_framework
 
 # By default everything, which is not a spec file, will be loaded from spec directory
 # and it's subdirectories
