--- a/lib/watirsplash/generators/templates/new_common_project/environment.rb.tt
+++ b/lib/watirsplash/generators/templates/new_common_project/environment.rb.tt
@@ -11,14 +11,7 @@
   By default everything in lib directory will be loaded
 =end
 
-# What framework to use? Possible values are:
-#   * default
-#   * watir
-#   * firewatir
-#   * watir-webdriver/ie
-#   * watir-webdriver/firefox
-#   * watir-webdriver/chrome
-WatirSplash::Util.framework = %<= %Q{"#{framework}"} %>
+<%= frameworks_banner %>
 
 require_rel "lib/"
 require_rel "config.rb"
