--- a/lib/watirsplash/generators/templates/new_project/environment.rb.tt
+++ b/lib/watirsplash/generators/templates/new_project/environment.rb.tt
@@ -13,11 +13,5 @@ require "watirsplash"
 # Load the framework specified by the environment variable WATIRSPLASH_FRAMEWORK or WatirSplash::Util.framework
 WatirSplash::Util.load_framework
 
-# By default everything, which is not a spec file, will be loaded from spec directory
-# and it's subdirectories
-spec_dir = File.join(File.dirname(__FILE__), "spec/**/*.rb")
-filtered_ruby_files = Dir.glob(spec_dir).delete_if do |file|
-  File.basename(file) =~ /.*_spec\.rb$/i
-end
-require_all filtered_ruby_files
+require_all File.join(File.dirname(__FILE__), "lib/**/*.rb")
 require_rel "config.rb"
