added support for specifying general elements on the page

--- a/lib/watirsplash/generators/templates/page/lib/%formatted_app_name%/page/%formatted_page_name%.rb.tt
+++ b/lib/watirsplash/generators/templates/page/lib/%formatted_app_name%/page/%formatted_page_name%.rb.tt
@@ -1,7 +1,7 @@
 module <%= app_name %>
   module Page
     class <%= page_name %> < WatirSplash::Page::Base
-      <%= %Q[url #{url}] if url %>
+      <%= page_body %>
     end
   end
 end
