do not maximize browser window anymore automatically do not use browser instance variable anymore, but use WatirSplash::Util.formatter.browser object instead

--- a/lib/watirsplash/generators/templates/page/lib/%formatted_namespace%/page/%formatted_page_name%.rb.tt
+++ b/lib/watirsplash/generators/templates/page/lib/%formatted_namespace%/page/%formatted_page_name%.rb.tt
@@ -1,6 +1,6 @@
 module <%= namespace %>
   module Page
-    class <%= page_name %> < WatirSplash::Page::Base
+    class <%= Thor::Util.camel_case page_name %> < WatirSplash::Page::Base
       <%= page_body %>
     end
   end
