--- a/lib/watirsplash/generators/templates/page/lib/%formatted_namespace%/page/%formatted_page_name%.rb.tt
+++ b/lib/watirsplash/generators/templates/page/lib/%formatted_namespace%/page/%formatted_page_name%.rb.tt
@@ -1,4 +1,4 @@
-module <%= namespace %>
+module <%= Thor::Util.camel_case namespace %>
   module Page
     class <%= Thor::Util.camel_case page_name %> < WatirSplash::Page::Base
       <%= page_body %>
