add WatirSplash::Browser.current method for accessing current browser object renamed #return_for to #modify move browser closing logic to config.rb to have more control bump watir version dependency to 1.9.1 added specs for WatirSplash::Browser and Page

--- a/lib/watirsplash/generators/templates/new_project/config.rb.tt
+++ b/lib/watirsplash/generators/templates/new_project/config.rb.tt
@@ -5,3 +5,13 @@ module <%= formatted_name %>
     URL = <%= formatted_url %>
   end
 end
+
+RSpec.configure do |config|
+  config.before :all do
+    # WatirSplash::Browser.new 
+  end
+
+  config.after(:all) do
+    WatirSplash::Browser.current.close if WatirSplash::Browser.current
+  end  
+end
